Customer and mooring related changes